--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     background-color: #1f2937;
     align-items: center;
+    justify-content: space-between;
 }
 
 .header ul {
@@ -18,7 +19,6 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
-    margin-left: auto;
 }
 
 .header a {
@@ -30,4 +30,27 @@ body {
 .header .logo {
     font-size: 24px;
     color: #f9faf8;
+}
+
+.body-one {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap:48px;
+    background-color: #1f2937;
+}
+
+.body-one .text .awesome {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+}
+
+.body-one .text .subtext {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.body-one .text button {
+    background-color: #3882f6;
 }
