--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
 
 .body-one .text .awesome {
     font-size: 48px;
-    font-weight: bolder;
+    font-weight: 800;
     color: #f9faf8;
 }
 
@@ -52,11 +52,33 @@ body {
 
 .body-one .text button {
     background-color: #3882f6;
-    border: 1px solid #3882f6;;
+    border: 1px solid #3882f6;
     color: white;
+}
+
+.body-two {
+    text-align: center;
+    color: #1f2937;
+}
+
+.body-two .information {
+    font-size: 36px;
+    font-weight: 800;
+}
+.body-two .images {
+    display: flex;
+    justify-content: center;
 }
 
 .body-two img {
     width: 150px;
     height: 150px;
+    border: 5px solid #3882f6;
+}
+
+.image-1,
+.image-2,
+.image-3,
+.image-4 {
+    max-width: 200px;
 }
