--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
 .header .logo {
     font-size: 24px;
     color: #f9faf8;
+    font-weight: 800;
 }
 
 .body-one {
@@ -50,12 +51,22 @@ body {
     color: #e5e7eb;
 }
 
-.body-one .text button {
+button {
     background-color: #3882f6;
-    border: 1px solid #3882f6;
     color: white;
+    cursor: pointer;
+    padding: 8px 24px;
+    border-radius: 8px;
+    font-weight: bold;
 }
 
+.body-one button {
+    border: 1px solid #3882f6;
+}
+
+.body-four button {
+    border: 1px solid white;
+}
 .body-two {
     text-align: center;
     color: #1f2937;
@@ -74,6 +85,7 @@ body {
     width: 150px;
     height: 150px;
     border: 5px solid #3882f6;
+    border-radius: 16px;
 }
 
 .image-1,
