--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
 }
 
@@ -53,11 +53,12 @@ body {
 
 button {
     background-color: #3882f6;
-    color: white;
+    color: #f9faf8;
     cursor: pointer;
     padding: 8px 24px;
     border-radius: 8px;
     font-weight: bold;
+    flex: none;
 }
 
 .body-one button {
@@ -65,7 +66,7 @@ button {
 }
 
 .body-four button {
-    border: 1px solid white;
+    border: 2px solid #f9faf8;
 }
 .body-two {
     text-align: center;
@@ -100,12 +101,13 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: #1f2937;
 }
 
 .body-three .quote {
     font-size: 36px;
-    color: #1f2937;
     font-style: italic;
+    font-weight: 300;
     width: 800px;
     flex: auto;
 }
@@ -115,4 +117,32 @@ button {
     width: 750px;
     font-size: 16px;
     font-weight: bold;
+}
+
+.body-four {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.body-four .text {
+    display: flex;
+    background-color: #3882f6;
+    color: #f9faf8;;
+    gap: 54px;
+    width: auto;
+    padding: 16px 32px;
+    border-radius: 8px;
+}
+
+.body-four .text .action {
+    font-weight: bold;
+}
+
+.footer {
+    background-color: #1f2937;
+    justify-content: center;
+    align-items: center;
+    color: #e5e7eb;
+    text-align: center;
 }
