--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@ body {
     display: flex;
     background-color: #1f2937;
     align-items: center;
-    justify-content: space-between;
-    padding: 16px 256px;
+    justify-content: center;
+    padding: 16px 0 64px 0;
+    gap: 64px;
 }
 
 .header ul {
@@ -20,6 +21,8 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
+    width: 450px;
+    justify-content: flex-end;
 }
 
 .header a {
@@ -32,20 +35,23 @@ body {
     font-size: 24px;
     color: #f9faf8;
     font-weight: 800;
+    width: 450px;
 }
 
 .body-one {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: center;
     background-color: #1f2937;
-    padding: 24px 256px;
+    gap: 64px;
+    height: 225px;
+    padding: 64px 0 128px 0;
 }
 
 .body-one .hero {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 8px;
     width: 450px;
     height: 250px;
 }
@@ -59,6 +65,11 @@ body {
 .body-one .hero .hero-secondary {
     font-size: 18px;
     color: #e5e7eb;
+}
+
+.body-one img {
+    width: 450px;
+    height: 225px;
 }
 
 button {
@@ -87,10 +98,12 @@ button {
 .body-two .information {
     font-size: 36px;
     font-weight: 800;
+    padding: 48px 0;
 }
 .body-two .images {
     display: flex;
     justify-content: center;
+    padding: 0 0 96px 0;
 }
 
 .body-two img {
@@ -98,6 +111,7 @@ button {
     height: 150px;
     border: 5px solid #3882f6;
     border-radius: 16px;
+    margin-bottom: 8px;
 }
 
 .image-1,
@@ -113,6 +127,7 @@ button {
     flex-direction: column;
     align-items: center;
     color: #1f2937;
+    padding: 96px 0;
 }
 
 .body-three .quote {
@@ -140,14 +155,16 @@ button {
     display: flex;
     background-color: #3882f6;
     color: #f9faf8;;
-    gap: 54px;
+    gap: 128px;
     width: auto;
-    padding: 16px 32px;
+    padding: 48px 96px;
     border-radius: 8px;
+    margin: 96px 0;
 }
 
 .body-four .text .action {
     font-weight: bold;
+    margin-bottom: 4px;
 }
 
 .footer {
@@ -156,4 +173,5 @@ button {
     align-items: center;
     color: #e5e7eb;
     text-align: center;
+    padding: 32px 0;
 }
