--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 .header ul {
     display: flex;
-    gap: 16px;
+    gap: 32px;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -44,14 +44,14 @@ body {
     justify-content: center;
     background-color: #1f2937;
     gap: 64px;
-    height: 225px;
+    height: 250px;
     padding: 64px 0 128px 0;
 }
 
 .body-one .hero {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 16px;
     width: 450px;
     height: 250px;
 }
@@ -69,7 +69,7 @@ body {
 
 .body-one img {
     width: 450px;
-    height: 225px;
+    height: 250px;
 }
 
 button {
@@ -87,9 +87,6 @@ button {
     width: max-content;
 }
 
-.body-four button {
-    border: 2px solid #f9faf8;
-}
 .body-two {
     text-align: center;
     color: #1f2937;
@@ -100,10 +97,12 @@ button {
     font-weight: 800;
     padding: 48px 0;
 }
+
 .body-two .images {
     display: flex;
     justify-content: center;
     padding: 0 0 96px 0;
+    gap: 48px;
 }
 
 .body-two img {
@@ -114,11 +113,8 @@ button {
     margin-bottom: 8px;
 }
 
-.image-1,
-.image-2,
-.image-3,
-.image-4 {
-    max-width: 200px;
+.body-two .text {
+    width: 150px;
 }
 
 .body-three {
@@ -155,8 +151,8 @@ button {
     display: flex;
     background-color: #3882f6;
     color: #f9faf8;;
-    gap: 128px;
-    width: auto;
+    justify-content: space-between;
+    width: 768px;
     padding: 48px 96px;
     border-radius: 8px;
     margin: 96px 0;
@@ -165,6 +161,10 @@ button {
 .body-four .text .action {
     font-weight: bold;
     margin-bottom: 4px;
+}
+
+.body-four button {
+    border: 2px solid #f9faf8;
 }
 
 .footer {
